--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,21 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<header class="page-header">
+    {% if page.featured_image %}
+        <img class="page-header__featured-image" src="{{ page.featured_image }}">
+    {% else %}
+        <img class="page-header__featured-image" src="/assets/default-featured-image.jpg">
+    {% endif %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+    <div class="container">
+        <h1 class="page-header__title">{{ page.title }}</h1>
+    </div>
+</header>
 
-</div>
+<article class="post-content">
+    <div class="container">
+        {{ content }}
+    </div>
+</article>
