--- a/_sass/_thumbnail.scss
+++ b/_sass/_thumbnail.scss
@@ -7,7 +7,7 @@
 }
 
 .thumbnail__caption {
-    color: lighten($text-color, 20%);
+    color: $color-secondary;
     padding: $thumbnail-caption-padding;
     text-align: center;
 }
