--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+$text-color:                #333333;
 $color-primary:             #8e44ad;
 $color-primary-contrast:    #ffffff;
+$color-secondary:           lighten($text-color, 25%);
 $link-color:                $color-primary;
 $font-family-sans-serif:    "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base:            18px;
@@ -25,4 +27,5 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "layout";
 @import "navbar";
 @import "page-header";
+@import "index";
 @import "thumbnail";
