--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
         <p class="page-header__meta">
             {{ page.date | date: "%b %-d, %Y" }}
 
-            {% if page.author.display_name %}
-                • by {{ page.author.display_name }}
+            {% if page.author %}
+                • by {{ page.author }}
             {% endif %}
 
             {% if page.meta %}
