Show post excerpt on index

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,3 +1,7 @@
+.post-summary {
+    padding-bottom: $line-height-computed;
+}
+
 .post-summary__meta {
     color: $color-secondary;
     float: right;
