--- a/css/main.scss
+++ b/css/main.scss
@@ -29,3 +29,4 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "page-header";
 @import "index";
 @import "thumbnail";
+@import "social-media";
