Style the page footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="page-footer">
 
     <ul class="social-media">
         {% if site.github_username %}
@@ -30,6 +30,6 @@
         {% endif %}
     </ul>
 
-    <p>{{ site.description }}</p>
+    <p class="site-description">{{ site.description }}</p>
 
 </footer>
