--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "layout";
 @import "navbar";
 @import "page-header";
+@import "page-footer";
 @import "index";
 @import "thumbnail";
 @import "social-media";
