--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,5 +1,9 @@
 <div class="thumbnail">
-    <img class="thumbnail__image" src="{{ src }}" alt="{{ alt }}">
+    <img class="thumbnail__image" alt="{{ alt }}" src="/{{ src }}" srcset="
+        {% for i in resized %}
+            /{{ i.path }} {{ i.width }}w{% if forloop.last == false %},{% endif %}
+        {% endfor %}
+    ">
 
     {% if alt %}
     <div class="thumbnail__caption">
