::selection colours, aw yiss

--- a/_sass/_scaffolding.scss
+++ b/_sass/_scaffolding.scss
@@ -1,3 +1,16 @@
+@mixin selection {
+    background-color: $color-primary;
+    color: $color-primary-contrast;
+}
+
+::-moz-selection {
+    @include selection;
+}
+
+::selection {
+    @include selection;
+}
+
 img {
   @include img-responsive;
 }
