--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,15 @@ layout: default
 
 <header class="page-header">
     {% if page.featured_image %}
-        <img class="page-header__featured-image" src="{{ page.featured_image }}">
+        {% assign featured_image = page.featured_image %}
     {% else %}
-        <img class="page-header__featured-image" src="/assets/default-featured-image.jpg">
+        {% assign featured_image = 'assets/default-featured-image.jpg' %}
     {% endif %}
+
+    {% responsive_image_block %}
+        path: {{ featured_image }}
+        template: _includes/featured-image.html
+    {% endresponsive_image_block %}
 
     <div class="container">
         <h1 class="page-header__title">{{ page.title }}</h1>
