Add href to title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="container">
-        <a href class="navbar__title navbar__link">Wildly Inaccurate</a>
+        <a href="{{ site.url }}" class="navbar__title navbar__link">Wildly Inaccurate</a>
 
         <ul class="navbar-nav">
         {% for page in site.pages %}
