Style <pre> and <code> tags

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
+@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code";
 
 @import "scaffolding";
 @import "layout";
