Add styles for tables

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,7 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code";
+@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
 
 @import "scaffolding";
 @import "layout";
@@ -32,3 +33,4 @@ $navbar-padding-horizontal: $navbar-padding-horizontal * 1.5;
 @import "index";
 @import "thumbnail";
 @import "social-media";
+@import "tables";
