Switch font to Merriweather with Roboto for headings

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -3,6 +3,7 @@
 }
 
 .navbar {
+    font-family: $font-family-sans-serif;
     margin-bottom: $navbar-margin-bottom;
     position: absolute;
     top: 0;
