--- a/css/main.scss
+++ b/css/main.scss
@@ -7,9 +7,19 @@ $color-primary:             #8e44ad;
 $color-primary-contrast:    #ffffff;
 $color-secondary:           lighten($text-color, 25%);
 $link-color:                $color-primary;
-$font-family-sans-serif:    "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-size-base:            18px;
+
+$font-family-sans-serif:    Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif:         Merriweather, Georgia, "Times New Roman", Times, serif;
+$font-family-base:          $font-family-serif;
+
+$font-size-base:            21px;
 $font-size-h1:              floor(($font-size-base * 3));
+
+$line-height-base:          1.5;
+
+$headings-font-family:      $font-family-sans-serif;
+$headings-font-weight:      700;
+$headings-line-height:      1.15;
 
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
