--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,7 +1,3 @@
-%navbar-spacing {
-    padding: $navbar-padding-vertical $navbar-padding-horizontal;
-}
-
 .navbar {
     font-family: $font-family-sans-serif;
     margin-bottom: $navbar-margin-bottom;
@@ -12,13 +8,12 @@
 }
 
 .navbar__title {
-    @extend %navbar-spacing;
-
     background-color: rgba($color-primary, 1);
     color: $color-primary-contrast;
     float: left;
     font-size: $font-size-large;
     font-weight: bold;
+    padding: 16px 22px;
 
     &:hover,
     &:focus {
@@ -39,10 +34,9 @@
 }
 
 .navbar-nav__item-link {
-    @extend %navbar-spacing;
-
     background: rgba($color-primary-contrast, 0.6);
     display: block;
+    padding: 20.5px 22px;
 
     &:hover,
     &:focus {
