Tidy up index page

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,4 +43,5 @@ $container-lg:              $container-md;
 @import "index";
 @import "thumbnail";
 @import "social-media";
+@import "site-description";
 @import "tables";
