--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,6 +30,6 @@
         {% endif %}
     </ul>
 
-    <p class="site-description">{{ site.description }}</p>
+    <p class="site-description site-description--footer">{{ site.description }}</p>
 
 </footer>
