--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,17 @@
 layout: default
 ---
 
-<header class="page-header">
+<header class="page-header page-header--no-meta">
     {% if page.featured_image %}
-        <img class="page-header__featured-image" src="{{ page.featured_image }}">
+        {% assign featured_image = page.featured_image %}
     {% else %}
-        <img class="page-header__featured-image" src="/assets/default-featured-image.jpg">
+        {% assign featured_image = 'assets/default-featured-image.jpg' %}
     {% endif %}
+
+    {% responsive_image_block %}
+        path: {{ featured_image }}
+        template: _includes/featured-image.html
+    {% endresponsive_image_block %}
 
     <div class="container">
         <h1 class="page-header__title">{{ page.title }}</h1>
