Reduce type size on small devices to improve readability

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@ $container-lg:              $container-md;
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
 
 @import "scaffolding";
+@import "type";
 @import "layout";
 @import "navbar";
 @import "page-header";
