--- a/css/main.scss
+++ b/css/main.scss
@@ -12,9 +12,11 @@ $font-family-serif:         Merriweather, Georgia, "Times New Roman", Times, ser
 $font-family-base:          $font-family-serif;
 
 $font-size-base:            21px;
-$font-size-h1:              floor(($font-size-base * 3));
+$font-size-h1:              floor($font-size-base * 3);
+$font-size-xs:              floor($font-size-base * 0.7);
 
 $line-height-base:          1.5;
+$paragraph-spacing:         24px;
 
 $headings-font-family:      $font-family-sans-serif;
 $headings-font-weight:      700;
@@ -46,3 +48,4 @@ $container-lg:              $container-md;
 @import "social-media";
 @import "site-description";
 @import "tables";
+@import "ads";
