--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,8 @@ $color-primary:             #8e44ad;
 $color-primary-contrast:    #ffffff;
 $color-secondary:           lighten($text-color, 33%);
 $link-color:                $color-primary;
+$code-bg:                   #f7f7f7;
+$code-border:               1px solid darken($code-bg, 15%);
 
 $font-family-sans-serif:    Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:         Merriweather, Georgia, "Times New Roman", Times, serif;
@@ -34,7 +36,6 @@ $container-lg:              $container-md;
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
 
 @import "scaffolding";
@@ -47,5 +48,7 @@ $container-lg:              $container-md;
 @import "thumbnail";
 @import "social-media";
 @import "site-description";
+@import "code";
 @import "tables";
+@import "toc";
 @import "ads";
