--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                 p = document.createElement('p');
                 p.appendChild(s);
 
-                n = document.querySelector('.post-content > p:nth-child(3)');
+                n = document.querySelector('.post-content > p:nth-of-type(3)');
 
                 if (n) {
                     n.parentNode.insertBefore(p, n.nextSibling);
