--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,8 +1,12 @@
 <div class="thumbnail">
+    {% if url %}<a class="thumbnail__link" href="{{ url }}">{% endif %}
+
     <img class="thumbnail__image"
          alt="{{ alt }}"
          src="/{{ path }}"
          srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
+
+    {% if url %}</a>{% endif %}
 
     {% if alt %}
     <div class="thumbnail__caption">
