--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,8 @@ $color-primary-contrast:    #ffffff;
 $color-secondary:           lighten($text-color, 33%);
 $link-color:                $color-primary;
 $code-bg:                   #f5f5f5;
-$code-border:               1px solid darken($code-bg, 10%);
+$code-border-color:         darken($code-bg, 10%);
+$code-border:               1px solid $code-border-color;
 
 $font-family-sans-serif:    Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:         Merriweather, Georgia, "Times New Roman", Times, serif;
@@ -16,6 +17,9 @@ $font-family-base:          $font-family-serif;
 $font-size-base:            21px;
 $font-size-h1:              floor($font-size-base * 3);
 $font-size-xs:              floor($font-size-base * 0.7);
+
+$blockquote-font-size:      $font-size-base;
+$blockquote-border-color:   $code-border-color;
 
 $line-height-base:          1.5;
 $paragraph-spacing:         24px;
