Horrible hack to maintain existing canonical URLs without losing HTTPS when GitHub redirects to include trailing slash

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
 
 <script>
     var disqus_shortname = 'wildlyinaccurate';
-    var disqus_url = '{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}';
+    var disqus_url = '{{ page.url | append: '♥♥♥♥' | replace: '/♥♥♥♥', '' | prepend: site.baseurl | prepend: site.url }}';
 
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
