--- a/_sass/_page-header.scss
+++ b/_sass/_page-header.scss
@@ -28,6 +28,7 @@
 }
 
 .page-header__featured-image {
+    -webkit-filter: blur(3px);
     filter: blur(3px);
     filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
     position: absolute;
