--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <link rel="canonical" href="{{ page.url | append: '♥♥♥♥' | replace: '/♥♥♥♥', '' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="canonical" href="{{ page.url | append: '♥♥♥♥' | replace: '/index.html♥♥♥♥', '/' | replace: '/♥♥♥♥', '' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
