--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,8 +23,12 @@ layout: default
                 • by {{ page.author }}
             {% endif %}
 
-            {% if page.meta %}
-                • {{ page.meta }}
+            {% if page.categories %}
+                • posted in
+
+                [{% for category in page.categories %}
+                    <a class="page-meta__category" href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %},{% endif %}
+                {% endfor %}]
             {% endif %}
         </p>
     </div>
