Implement client-side search functionality

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,7 @@ $container-lg:              810px;
 @import "social-media";
 @import "site-description";
 @import "pagination";
+@import "search";
 @import "code";
 @import "tables";
 @import "toc";
