Add post meta below post content

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,6 +52,7 @@ $container-lg:              810px;
 @import "navbar";
 @import "page-header";
 @import "page-footer";
+@import "post";
 @import "index";
 @import "thumbnail";
 @import "social-media";
