--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
     <div class="container">
         <h1 class="page-header__title">{{ page.title }}</h1>
-        <p class="page-header__meta">
+        <p class="post-meta--header">
             {{ page.date | date: "%b %-d, %Y" }}
 
             {% if page.author %}
@@ -26,9 +26,9 @@ layout: default
             {% if page.categories %}
                 • posted in
 
-                [{% for category in page.categories %}
-                    <a class="page-meta__category" href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %},{% endif %}
-                {% endfor %}]
+                <span class="post-meta__data">
+                    [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
+                </span>
             {% endif %}
         </p>
     </div>
@@ -37,6 +37,29 @@ layout: default
 <article class="post-content">
     {{ content }}
 </article>
+
+<footer class="post-meta post-meta--footer">
+    <p>
+        This post was written by <strong>{{ page.author }}</strong> on <strong>{{ page.date | date: "%-d %B, %Y" }}</strong>, and last updated on <strong>{{ page.last_modified_at | date: "%-d %B, %Y" }}</strong>.
+
+        {% if page.categories %}
+            It was posted in
+
+            <span class="post-meta__data">
+                [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
+            </span>
+        {% endif %}
+
+        {% if page.tags %}
+            {% if page.categories %}and{% else %}It was{% endif %}
+            tagged with
+
+            <span class="post-meta__data">
+                [{% for tag in page.tags %}<a href="/tag/{{ tag }}/">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
+            </span>
+        {% endif %}
+    </p>
+</footer>
 
 <div class="post-comments" id="disqus_thread"></div>
 
