--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign hide_description = true %}
 {% capture title %}Tag: {{ page.tag }}{% endcapture %}
-{% include page-header.html %}
+{% include index-page-header.html %}
 
 <section class="posts-index">
 
