--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,37 +2,11 @@
 layout: default
 ---
 
-<header class="page-header">
-    {% if page.featured_image %}
-        {% assign featured_image = page.featured_image %}
-    {% else %}
-        {% assign featured_image = 'assets/default-featured-image.jpg' %}
-    {% endif %}
+{% capture post_meta %}
+    {% include post-meta.html %}
+{% endcapture %}
 
-    {% responsive_image_block %}
-        path: {{ featured_image }}
-        template: _includes/featured-image.html
-    {% endresponsive_image_block %}
-
-    <div class="container">
-        <h1 class="page-header__title">{{ page.title }}</h1>
-        <p class="post-meta--header">
-            {{ page.date | date: "%b %-d, %Y" }}
-
-            {% if page.author %}
-                • by {{ page.author }}
-            {% endif %}
-
-            {% if page.categories %}
-                • posted in
-
-                <span class="post-meta__data">
-                    [{% for category in page.categories %}<a href="/category/{{ category }}/">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}]
-                </span>
-            {% endif %}
-        </p>
-    </div>
-</header>
+{% include content-page-header.html %}
 
 <article class="post-content">
     {{ content }}
