Create collection SPA and layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,7 @@
 @import "component/site-description";
 @import "component/pagination";
 @import "component/search";
+@import "component/collection";
 @import "component/code";
 @import "component/tables";
 @import "component/toc";
