Remove title from home page

--- a/_sass/component/_page-header.scss
+++ b/_sass/component/_page-header.scss
@@ -43,3 +43,9 @@
         height: auto;
     }
 }
+
+@media (max-width: $screen-sm-min) {
+    .page-header__title {
+        margin-top: 150px;
+    }
+}
