--- a/_includes/index-page-header.html
+++ b/_includes/index-page-header.html
@@ -1,8 +1,8 @@
-<header class="page-header page-header--no-meta">
+<header class="page-header page-header--no-meta {% unless title %}page-header--no-title{% endunless %}">
     {% responsive_image path: assets/default-featured-image.jpg template: _includes/featured-image.html %}
 
     <div class="container">
-        <h1 class="page-header__title">{{ title }}</h1>
+        {% if title %}<h1 class="page-header__title">{{ title }}</h1>{% endif %}
         {% unless hide_description == true %}<p class="site-description">{{ site.description }}</p>{% endunless %}
     </div>
 </header>
