--- a/_sass/component/_site-description.scss
+++ b/_sass/component/_site-description.scss
@@ -2,6 +2,10 @@
     font-style: italic;
 }
 
+.page-header--no-title .site-description {
+    margin-top: 165px;
+}
+
 .site-description--footer {
     font-size: $font-size-small;
 }
