Cache hot templates

--- a/_includes/content-page-header.html
+++ b/_includes/content-page-header.html
@@ -8,6 +8,7 @@
     {% responsive_image_block %}
         path: {{ featured_image }}
         template: _includes/featured-image.html
+        cache: true
     {% endresponsive_image_block %}
 
     <div class="container">
