--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -7,13 +7,18 @@ $code-bg:                   #f5f5f5;
 $code-border-color:         darken($code-bg, 10%);
 $code-border:               1px solid $code-border-color;
 
-$font-family-sans-serif:    Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:         Merriweather, Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif:    sans-serif;
+$font-family-serif:         serif;
 $font-family-base:          $font-family-serif;
 
-$font-size-base:            20px;
-$font-size-h1:              floor($font-size-base * 3);
-$font-size-xs:              floor($font-size-base * 0.7);
+$font-size-base:            21px;
+$font-size-xs:              floor($font-size-base * 0.75);
+
+$font-size-h1:              floor($font-size-base * 2);
+$font-size-h2:              floor($font-size-base * 1.7);
+$font-size-h3:              ceil($font-size-base * 1.4);
+$font-size-h4:              ceil($font-size-base * 1.15);
+$font-size-h5:              $font-size-base;
 
 $blockquote-font-size:      $font-size-base;
 $blockquote-border-color:   $code-border-color;
@@ -22,14 +27,13 @@ $line-height-base:          1.5;
 $paragraph-spacing:         24px;
 
 $headings-font-family:      $font-family-sans-serif;
-$headings-font-weight:      700;
 $headings-line-height:      1.15;
 
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
-// Don't go wider than 880px for maximum readability
-$container-desktop:         (880px + $grid-gutter-width);
-$container-md:              880px;
+// Don't go wider than 920px for maximum readability
+$container-desktop:         (920px + $grid-gutter-width);
+$container-md:              920px;
 
 $container-large-desktop:   $container-desktop;
 $container-lg:              $container-md;
