--- a/_sass/component/_type.scss
+++ b/_sass/component/_type.scss
@@ -1,3 +1,26 @@
+@media (max-width: $screen-xs-max) {
+  blockquote,
+    body {
+        font-size: floor($font-size-base * 0.9);
+    }
+
+    h1 {
+        font-size: floor($font-size-h1 * 0.8);
+
+      }
+    h2 {
+        font-size: floor($font-size-h2 * 0.8);
+    }
+
+    h3 {
+        font-size: floor($font-size-h3 * 0.8);
+    }
+
+    h4 {
+        font-size: floor($font-size-h4 * 0.8);
+    }
+}
+
 h4,
 h5,
 h6 {
