--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
     {% include head.html %}
@@ -11,7 +11,7 @@
 
         {% include footer.html %}
 
-        <script>
+        <script defer>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -21,7 +21,7 @@
           ga('send', 'pageview');
         </script>
 
-        <script>
+        <script defer>
             (function() {
                 var s, p, n, a;
 
