wowee here we go

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-<footer class="page-footer">
-
+<footer class="c">
     <ul class="social-media">
         {% if site.github_username %}
         <li>
@@ -30,6 +29,5 @@
         {% endif %}
     </ul>
 
-    <p class="site-description site-description--footer">{{ site.description }}</p>
-
+    <p>{{ site.description }}</p>
 </footer>
