--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar">
-    <div class="container">
+<nav class="p-a w-100">
+    <div class="c">
         <a href="{{ site.url }}" class="navbar__title navbar__link">Wildly Inaccurate</a>
 
         <ul class="navbar-nav">
