--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -1,16 +1,13 @@
 ---
 layout: default
-extra_stylesheets:
-  - /css/collection.css
 ---
-
 {% capture post_meta %}
     {% include post-meta.html %}
 {% endcapture %}
 
 {% include content-page-header.html %}
 
-<article class="post-content">
+<article class="c">
     {{ page.excerpt }}<!--more-->
 
     <div class="collection-container">
