--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-
 {% include content-page-header.html %}
 
-<article class="post-content">
+<article class="c">
     {{ content }}
 
     <input class="search-input" placeholder="Search query">
@@ -40,5 +39,4 @@ layout: default
 </script>
 {% endraw %}
 
-<script src="/js/hogan.js"></script>
-<script src="/js/search.js"></script>
+<script async src="/js/compiled/search.js"></script>
