--- a/_includes/content-page-header.html
+++ b/_includes/content-page-header.html
@@ -1,4 +1,4 @@
-<header class="page-header page-header--no-meta">
+<header class="page-header card mb-3">
     {% if page.featured_image %}
         {% assign featured_image = page.featured_image %}
     {% else %}
@@ -11,9 +11,8 @@
         cache: true
     {% endresponsive_image_block %}
 
-    <div class="container">
-        <h1 class="page-header__title">{{ page.title }}</h1>
-
+    <div class="card-img-overlay c">
+        <h1>{{ page.title }}</h1>
         {{ post_meta }}
     </div>
 </header>
