--- a/_includes/featured-image.html
+++ b/_includes/featured-image.html
@@ -1,1 +1,1 @@
-<img class="page-header__featured-image" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
+<img class="p-a h-100 h-a@sm" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
