--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ canonicalUrl | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+    {% if page.extra_head %}{{ page.extra_head }}{% endif %}
 </head>
