--- a/_sass/component/_layout.scss
+++ b/_sass/component/_layout.scss
@@ -1,7 +1,4 @@
-.post-content,
-.post-meta--footer,
-.post-comments,
-.posts-index,
-.page-footer {
-    @extend .container;
+.c {
+  @include make-container();
+  @include make-container-max-widths();
 }
