--- a/_sass/component/_navbar.scss
+++ b/_sass/component/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
     font-family: $font-family-sans-serif;
-    margin-bottom: $navbar-margin-bottom;
+    margin-bottom: $navbar-padding-y;
     position: absolute;
     top: 0;
     width: 100%;
@@ -11,7 +11,7 @@
     @extend %primary-button;
 
     float: left;
-    font-size: $font-size-large;
+    font-size: $font-size-lg;
     font-weight: bold;
 }
 
@@ -39,15 +39,15 @@
     }
 }
 
-@media (max-width: $screen-xs-max) {
+@include media-breakpoint-down(sm) {
     .navbar-nav__item-link {
         padding-bottom: 22px;
         padding-top: 21px;
     }
 }
 
-@media (max-width: $screen-xs-max / 2) {
-    .navbar-nav__item-link {
-        padding: 10px 12px;
-    }
-}
+// @media (max-width: $screen-xs-max / 2) {
+//     .navbar-nav__item-link {
+//         padding: 10px 12px;
+//     }
+// }
