--- a/_sass/component/_type.scss
+++ b/_sass/component/_type.scss
@@ -1,28 +1,16 @@
-@media (max-width: $screen-xs-max) {
-  blockquote,
-    body {
-        font-size: floor($font-size-base * 0.9);
-    }
+// Cherry-picked from Bootstrap's _type.scss
 
-    h1 {
-        font-size: floor($font-size-h1 * 0.8);
-
-      }
-    h2 {
-        font-size: floor($font-size-h2 * 0.8);
-    }
-
-    h3 {
-        font-size: floor($font-size-h3 * 0.8);
-    }
-
-    h4 {
-        font-size: floor($font-size-h4 * 0.8);
-    }
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: $headings-margin-bottom;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  color: $headings-color;
 }
 
-h4,
-h5,
-h6 {
-    margin-bottom: ceil($line-height-computed / 3);
-}
+h1 { font-size: $font-size-h1; }
+h2 { font-size: $font-size-h2; }
+h3 { font-size: $font-size-h3; }
+h4 { font-size: $font-size-h4; }
+h5 { font-size: $font-size-h5; }
+h6 { font-size: $font-size-h6; }
