--- a/css/main.scss
+++ b/css/main.scss
@@ -1,34 +1,26 @@
 ---
 ---
-@import "bootstrap";
+// BOOTSTRAP
+// Core variables and mixins
+@import "bootstrap-overrides";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
 
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/normalize";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/print";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/buttons";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/labels";
+// Reset and dependencies
+@import "normalize";
+@import "../node_modules/bootstrap/scss/print";
 
-@import "component/pygments";
+// Core CSS
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/code";
 
-@import "component/components";
-@import "component/scaffolding";
-@import "component/type";
-@import "component/layout";
-@import "component/navbar";
+// Components
+@import "../node_modules/bootstrap/scss/card";
+
+// WILDLY INACCURATE
 @import "component/page-header";
-@import "component/page-footer";
-@import "component/post";
-@import "component/index";
-@import "component/thumbnail";
-@import "component/social-media";
-@import "component/site-description";
-@import "component/pagination";
-@import "component/search";
-@import "component/collection";
-@import "component/code";
-@import "component/tables";
-@import "component/toc";
+@import "component/layout";
+@import "component/button";
 @import "component/ads";
+@import "utilities";
