--- a/_includes/post-summary.html
+++ b/_includes/post-summary.html
@@ -1,5 +1,5 @@
 <article class="pb-3">
-    <span class="f-r">{{ post.date | date: "%b %-d, %Y" }}</span>
+    <span class="f-r c-gl">{{ post.date | date: "%b %-d, %Y" }}</span>
 
     <h3>
         <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
