--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -7,7 +7,7 @@ layout: default
 
 {% include content-page-header.html %}
 
-<article class="c">
+<article class="wrap">
     {{ page.excerpt }}<!--more-->
 
     <div class="collection-container">
@@ -15,5 +15,5 @@ layout: default
     </div>
 </article>
 
-<script src="/js/compiled/Collection.js"></script>
-<script src="/js/collection-bootstrap.js"></script>
+<script async defer src="/js/compiled/Collection.js"></script>
+<script async defer src="/js/collection-bootstrap.js"></script>
