--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,6 @@ layout: default
 ---
 {% include content-page-header.html %}
 
-<article class="c">
+<article class="wrap">
     {{ content }}
 </article>
