--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include content-page-header.html %}
 
-<article class="c">
+<article class="wrap">
     {{ content }}
 
     <input class="search-input" placeholder="Search query">
