--- a/_sass/component/_ads.scss
+++ b/_sass/component/_ads.scss
@@ -10,7 +10,7 @@
 
 .carbon-text,
 .carbon-poweredby {
-  color: $color-secondary;
+  color: $gray-dark;
   display: block;
   font-size: $font-size-xs;
   margin-top: ceil($font-size-xs / 2);
