--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@ layout: default
 {% capture title %}Category: {{ page.category }}{% endcapture %}
 {% include index-page-header.html %}
 
-<section class="c">
+<section class="wrap">
     {% for post in site.categories[page.category] %}
         {% include post-summary.html %}
     {% endfor %}
