--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -1,13 +1,18 @@
-$text-color:                #222;
-$color-primary:             #8e44ad;
-$color-secondary:           lighten($text-color, 33%);
-$link-color:                $color-primary;
+$brand-primary:             #8e44ad;
+$link-color:                $brand-primary;
 
 $font-family-sans-serif:    sans-serif;
 $font-family-serif:         serif;
 $font-family-base:          $font-family-serif;
 $headings-font-family:      $font-family-sans-serif;
 
-$font-size-base:            1.4rem;
+$font-size-base:            1.32rem;
 
 $border-radius:             0;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px
+);
