--- a/_includes/content-page-header.html
+++ b/_includes/content-page-header.html
@@ -1,4 +1,4 @@
-<header class="page-header card mb-4">
+<header class="page-header mb-4">
     {% if page.featured_image %}
         {% assign featured_image = page.featured_image %}
     {% else %}
@@ -11,7 +11,7 @@
         cache: true
     {% endresponsive_image_block %}
 
-    <div class="card-img-overlay wrap">
+    <div class="wrap pt-5">
         <h1 class="mt-5">{{ page.title }}</h1>
         {{ post_meta }}
     </div>
