--- a/_includes/featured-image.html
+++ b/_includes/featured-image.html
@@ -1,1 +1,1 @@
-<img class="pos-a b-0 h-100 h-a@sm" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
+<img class="pos-a b-0 h-100 h-sm-a z--1" src="/{{ path }}" srcset="{% for i in resized %}/{{ i.path }} {{ i.width }}w, {% endfor %} /{{ original.path }} {{ original.width }}w">
