--- a/_sass/component/_button.scss
+++ b/_sass/component/_button.scss
@@ -1,5 +1,11 @@
 .btn {
   background: $brand-primary;
   color: $white;
+  display: inline-block;
   font-family: $font-family-sans-serif;
+}
+
+.btn--inverse {
+  background: rgba(255, 255, 255, 0.67);
+  color: $brand-primary;
 }
