--- a/_sass/utilities/_sizing.scss
+++ b/_sass/utilities/_sizing.scss
@@ -1,19 +1,28 @@
-@each $prop, $abbrev in (height: h, width: w) {
-  @each $size, $lengths in $spacers {
-    $length: map-get($lengths, x);
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-    .#{$abbrev}-#{$size}  {
-      #{$prop}: $length;
+    @each $prop, $abbrev in (height: h, width: w) {
+      // $sizes is percentages (25—100)
+      @each $size, $length in $sizes {
+        .#{$abbrev}#{$infix}-#{$size}  {
+          #{$prop}: $length;
+        }
+
+      }
+
+      // $spacers is concrete units (rems)
+      @each $size, $lengths in $spacers {
+        $length: map-get($lengths, x);
+
+        .#{$abbrev}#{$infix}-#{$size}  {
+          #{$prop}: $length;
+        }
+      }
+
+      .#{$abbrev}#{$infix}-a  {
+        #{$prop}: auto;
+      }
     }
-  }
-
-  .#{$abbrev}-100  {
-    #{$prop}: 100%;
-  }
-}
-
-@include media-breakpoint-up(sm) {
-  .h-a\@sm {
-    height: auto;
   }
 }
